# app/Http/Requests/Project/UpdateProjectRequest.php
@@ -17,6 +17,9 @@ class UpdateProjectRequest extends FormRequest
             'client_id' => 'sometimes|integer|exists:clients,id',
             'name' => 'sometimes|string|max:255',
             'status' => 'sometimes|string|max:50',
+            'visibility'   => 'sometimes|string|in:public,private',
+            'members'      => 'sometimes|array',                   
+            'members.*'    => 'sometimes|exists:users,id',   
             'type_project' => 'sometimes|string|max:50',
             'link' => 'nullable|url|max:255',
             'goal' => 'nullable|string|max:255',
